--- a/css/app.css
+++ b/css/app.css
@@ -111,8 +111,7 @@ dd:after {
 
 .sidebar {
   position: absolute;
-  width: 100%;
-  padding: 20px;
+  width: 200px;
   top: 10%;
   z-index: 0;
   -webkit-box-sizing: border-box;
@@ -143,7 +142,7 @@ dd:after {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
-  background-color: #e6e6e6;
+  background-color: #ffffff;
   padding-top: 3em;
   height: 100%;
 }
@@ -156,13 +155,13 @@ dd:after {
 
 .app_header {
   position: relative;
-  background-color: #fdfdfd;
+  background-color: #f8f9f8;
   width: 100%;
   height: 3em;
   z-index: 101;
   top: 0px;
   color: #83949e;
-  border-bottom: 1px solid #cdcdcd;
+  border-bottom: 1px solid #e2e3e2;
 }
 
 .app_header.no_bottom {
@@ -227,25 +226,42 @@ i.sup {
 
 .dropdown {
   overflow: hidden;
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
   background-color: #ffffff;
   width: 100%;
   position: absolute;
-  z-index: 100;
-  top: -100%;
+  z-index: 1001;
+  top: 3em;
   border-bottom: 2px solid #54616a;
   text-align: right;
+  
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
-.dropdown.visible {
+.dropdown.ng-enter,
+.dropdown.ng-leave {
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.dropdown.ng-enter,
+.dropdown.ng-leave.ng-leave-active {
+  top: -100%;
+}
+.dropdown.ng-leave,
+.dropdown.ng-enter.ng-enter-active {
   top: 3em;
-  z-index: 100;
+}
+
+.dropdown_dimmer {
+  top: 3em;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .dropdown i {
@@ -385,6 +401,37 @@ header .btn {
   display: inherit;
 }
 
+.slide_down {
+  overflow: hidden;
+  position: relative;
+}
+
+.slide_down i {
+  position: absolute;
+  right: 10px;
+  color: #9a9a9a;
+}
+
+.slide_down.ng-enter,
+.slide_down.ng-leave {
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.slide_down.ng-enter,
+.slide_down.ng-leave.ng-leave-active {
+  height: 0;
+  opacity: 0;
+}
+.slide_down.ng-leave,
+.slide_down.ng-enter.ng-enter-active {
+  height: 7.5em;
+  opacity: 1;
+}
+
 .personal_button {
   background: url(../images/personal.svg) no-repeat left center;
   background-size: 50%;
@@ -431,9 +478,12 @@ header .btn {
   padding: 0;
 }
 
-nav a {
-  padding: 10px;
-  display: inline-block;
+nav li {
+  padding: .6em 0 .6em .6em;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .visible a {
@@ -452,11 +502,11 @@ nav a {
   -webkit-transform: translateY(100%);
   -moz-transform: translateY(100%);
   transform: translateY(100%);
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
 #palette.visible {
@@ -470,15 +520,20 @@ nav a {
   top: 0;
   z-index: 1000;
   height: 100%;
-  width: 200px;
+  width: 80%;
   right: -90%;
   border-left: 1px solid rgba(104, 104, 104, 0);
   
-  -webkit-transition: all 200ms ease-in-out;
-  -moz-transition: all 200ms ease-in-out;
-  -ms-transition: all 200ms ease-in-out;
-  -o-transition: all 200ms ease-in-out;
-  transition: all 200ms ease-in-out;
+  
+  -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -moz-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.dimmer.conversations_dimmer {
+  z-index: 500;
 }
 
 .tools_panel.visible {
@@ -502,6 +557,7 @@ nav a {
   border-style: solid;
   border-color: #dadada #d2d2d2 #c5c5c5;
   border-radius: 20px;
+  
 }
 
 .tag .close_btn {
@@ -1322,6 +1378,30 @@ textarea {
   padding: 1em;
 }
 
+.input_grid:first-of-type {
+  margin-top: 1em;
+}
+
+.input_grid {
+  border: none;
+  margin: 2em 1em;
+}
+
+.input_grid input, .input_grid textarea {
+  margin: 0;
+  padding: 1em 0;
+  border: none;
+  border-bottom: 1px solid #dcdcdc;
+}
+
+.input_grid input[value=] {
+  background-color: #e4e41c;
+}
+
+.input_grid input:last-of-type {
+  border-bottom: none;
+}
+
 /* Routing transistions */
   
 .page.last {
@@ -1339,7 +1419,6 @@ textarea {
   -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
-
 
 @-webkit-keyframes in {
 
@@ -1929,6 +2008,14 @@ input.object-list-search:focus {
     -moz-transform: none;
     -webkit-transform: none;
     box-shadow: none;
+  }
+  
+  .dimmer.main_dimmer {
+    display: none;
+  }
+  
+  .hide_large {
+    display: none;
   }
   
   .sidebar, .sidebar li {
