--- a/partials/campaign_new.html
+++ b/partials/campaign_new.html
@@ -1,63 +1,62 @@
-<header class="app_header">
-  <a href="#/account/{{accountId}}" class="btn icon left">cancel account/{{accountId}}</a>
-  <a ng-click='advanceStep()' ng-hide='currentStep >= (steps.length-1)' class="btn right">Next Step</a>
-  <a href="#/account/{{accountId}}" ng-show='currentStep >= (steps.length-1)' class="btn right">Save Changes</a>
+
+<header class="app_header"><a href="#/account/{{accountId}}" class="btn icon left">cancel account/{{accountId}}</a><a ng-click="advanceStep()" ng-hide="ng-hide" currentstep="currentStep">
+    = (steps.length-1)' class="btn right"
+    Next Step</a><a href="#/account/{{accountId}}" ng-show="ng-show" currentstep="currentStep">
+    = (steps.length-1)' class="btn right"
+    Save Changes</a>
   <h2 ng-click="toggleSidebar('right')">Edit Campaign #1: Step {{steps[currentStep]+1}}</h2>
   <nav class="header_dropdown closed">
     <ol>
-      <li ng-repeat='n in steps' ng-click='changeStep(n)'>Step {{n+1}}</li>
+      <li ng-repeat="n in steps" ng-click="changeStep(n)">Step {{n+1}}</li>
       <li><a href="#/account/{{accountId}}">Save Changes</a></li>
     </ol>
   </nav>
 </header>
-
 <div class="scroller">
   <h2>{{openedCampaign.name}}</h2>
-  <section ng-switch on='currentStep'>
-    <div ng-switch-when='0'>
+  <section ng-switch="ng-switch" on="currentStep">
+    <div ng-switch-when="0">
       <ol>
-        <li ng-repeat="question in openedCampaign.questionsList">
-          {{question}}
-        </li>
+        <li ng-repeat="question in openedCampaign.questionsList">{{question}}</li>
       </ol>
     </div>
-    <div ng-switch-when='1'>
+    <div ng-switch-when="1">
       <form method="post" action="">
-        <input type="text" name="title" value="" placeholder="Gift Title" />
+        <input type="text" name="title" value="" placeholder="Gift Title"/>
         <input type="text" name="description" value="" placeholder="Description"/>
         <input type="text" name="terms" value="" placeholder="Terms and Conditions"/>
       </form>
     </div>
-    <div ng-switch-when='2'>
+    <div ng-switch-when="2">
       <ul>
         <li>Facebook Account<small class="status">connected</small></li>
         <li>Twitter Account<small class="status">connected</small></li>
       </ul>
       <button class="dotted">Add new social account</button>
     </div>
-    
-    <div ng-switch-when='3'>
+    <div ng-switch-when="3">
       <label for="emails">Send email invitations to others to help manage this campaign.</label>
       <input type="text" name="name" value="" placeholder="name"/>
       <input type="email" name="email" value="" placeholder="email"/>
       <fieldset>
-        <input type="radio" name="permission" id="read"/>
+        <input id="read" type="radio" name="permission"/>
         <label for="read">View Analytics</label>
-        <input type="radio" name="permission" id="readwrite"/>
+        <input id="readwrite" type="radio" name="permission"/>
         <label for="readwrite">View and edit details</label>
       </fieldset>
       <button class="new_invite">Send</button>
-      <hr>
+      <hr/>
       <h2>Invites sent:</h2>
       <ul>
-        <li><button>resend</button>John Doe<small class="status">pending...</small></li>
+        <li>
+          <button>resend</button>John Doe<small class="status">pending...</small>
+        </li>
         <li>Jane Roberts<small class="status">accepted</small></li>
       </ul>
     </div>
-    
-    <div ng-switch-when='4'>
+    <div ng-switch-when="4">
       <label for="url">Choose a URL for your access point</label>
-      <input type="text" name="url" id="url" value="fdbk.com/business_name"/>
+      <input id="url" type="text" name="url" value="fdbk.com/business_name"/>
       <label for="access_points">or choose a previous access point.</label>
       <select>
         <option>407 9th St, Brooklyn, NY</option>
