--- a/jade_partials/campaign.html.jade
+++ b/jade_partials/campaign.html.jade
@@ -12,7 +12,7 @@ header.app_header(ng-class='{no_bottom : campaignNav_true}')
     i.icon-chart-bar(ng-switch-when='/analytics')
     i.icon-trophy(ng-switch-when='/rewards')
     i.icon-at(ng-switch-when='/contacts')
-nav.campaign_nav.dropdown.slide_down(ng-if='campaignNav_true', ng-click='toggleNavbar(true)')
+nav.campaign_nav.dropdown(ng-if='campaignNav_true', ng-click='toggleNavbar()')
   ul
     li(ng-hide='currentPage == "/conversations"')
       a(href='#/account/{{accountId}}/campaign/{{campaignId}}/conversations')
