--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -7,7 +7,7 @@
   </hgroup>
   <button ng-click="toggleNavbar()" ng-switch="currentPage" class="btn icon right"><i class="icon-down-open sup"></i><i ng-switch-when="/edit" class="icon-pencil"></i><i ng-switch-when="/conversations" class="icon-chat"></i><i ng-switch-when="/analytics" class="icon-chart-bar"></i><i ng-switch-when="/rewards" class="icon-trophy"></i><i ng-switch-when="/contacts" class="icon-at"></i></button>
 </header>
-<nav ng-if="campaignNav_true" ng-click="toggleNavbar(true)" class="campaign_nav dropdown slide_down">
+<nav ng-if="campaignNav_true" ng-click="toggleNavbar()" class="campaign_nav dropdown">
   <ul>
     <li ng-hide="currentPage == &quot;/conversations&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
     <li ng-hide="currentPage == &quot;/analytics&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
