--- a/css/app.css
+++ b/css/app.css
@@ -111,6 +111,7 @@ dd:after {
 
 .sidebar {
   position: absolute;
+  padding-left: 10px;
   width: 200px;
   top: 10%;
   z-index: 0;
@@ -386,7 +387,7 @@ header .btn {
   -ms-transition: all 300ms ease-in-out;
   -o-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
-  color: #363636;
+  color: #767676;
 }
 
 .sidebar li.personal {
@@ -409,7 +410,7 @@ header .btn {
 .slide_down i {
   position: absolute;
   right: 10px;
-  color: #9a9a9a;
+  color: inherit;
 }
 
 .slide_down.ng-enter,
@@ -2025,5 +2026,14 @@ input.object-list-search:focus {
   
   .aligner {
     padding-right: 200px;
+  }
+  
+  .instance.card {
+    padding: 1em 1.5em;
+    margin: 2em;
+  }
+  
+  .instance.card:first-of-type {
+    margin-top: 1em;
   }
 }
