--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -23,7 +23,7 @@
   </div>
   <header class="app_header">
     <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
-    <h1 class="center">@<span ng-bind="handle"></span></h1>
+    <h1 ng-bind="accountId" class="center"></h1>
     <button ng-click="edit_mode || toggleNewMode()" ng-if="!new_mode" ng-hide="edit_mode" ng-class="{disabled: edit_mode}" class="btn right circled icon">+</button>
   </header>
   <div class="scroller_wrapper">
@@ -40,7 +40,7 @@
       <ul id="campaign_list" class="object-list">
         <li ng-repeat="campaign in campaignTitleList" ng-class="{selected : selected_campaigns.some(campaign.id)}" class="object-item">
           <hgroup><a href="#/account/{{accountId}}/campaign/{{campaign.id}}/conversations">
-              <h2>@{{handle}}</h2>
+              <h2>@{{campaign.handle}}</h2>
               <h1>{{campaign.title}}</h1></a></hgroup>
           <div class="object-alerts">
             <div ng-if="campaign.newCounter != 0" ng-hide="edit_mode" ng-bind="campaign.newCounter" class="alert new_counter"></div>
@@ -55,7 +55,7 @@
         <li ng-repeat="campaign in archivedCampaignList">
           <button ng-click="unarchiveListItem(campaign, campaignList)" class="btn right">unarchive</button>
           <hgroup><a href="#/account/{{accountId}}/campaign/{{campaign.id}}/conversations">
-              <h2>@{{handle}}</h2>
+              <h2>@{{campaign.handle}}</h2>
               <h1>{{campaign.title}}</h1></a></hgroup>
         </li>
       </ul>
