--- a/app.jade
+++ b/app.jade
@@ -27,29 +27,27 @@ html(lang='en', ng-app='appmodule', ng-controller='appCtr')
     nav.main_nav.sidebar       
       ul
         li
-          a(ng-click='togglePersonalPages()') Personal Pages
+          a(ng-click='togglePersonalPages()') Elliott Regan
           ul.expando.slide_down(ng-if='personal_pages_visible')
             li(ng-click='togglePersonalPages()')
               a(href='#/settings', ng-click='toggleSidebar()')
                 i.icon-cog
-                | My Settings
+                | Settings
             li(ng-click='togglePersonalPages()')
               a(href='#/rewards', ng-click='toggleSidebar()')
                 i.icon-trophy
-                | My Rewards
+                | Rewards
             li(ng-click='togglePersonalPages()')
               a(href='#/history', ng-click='toggleSidebar()')
                 i.icon-chat
-                | My Conversations
+                | Conversations
         li.home
           a(href='#/account/all/campaign/camp0+camp1+camp2/conversations') Global Feed
-        li(ng-repeat='account in accountList')
+        li(ng-repeat='account in accountList', ng-class='{selected : accountId == account.id}')
           a(href='#/account/{{account.id}}/dashboard')
             span(ng-bind='account.id')
-        li
-          a(href='#/account/all/dashboard') All Campaigns
       .tools
-        button.btn.new_handle Create new handle
+        button.btn.soft.new_handle + Create new account
     // App libraries
     script(src='js/angular/app.js', type='text/javascript')
     script(src='js/angular/appControllers.js', type='text/javascript')
