--- a/css/app.css
+++ b/css/app.css
@@ -17,6 +17,15 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
+  outline: none;
+}
+
+a:focus {
+  outline: none;
+}
+
+li > a {
+  display: block;
 }
 
 i {
@@ -53,10 +62,10 @@ dd:after {
   height: 100%;
   position: absolute;
   
-  z-index: 1000;
+  z-index: 50;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.21);
+  background-color: rgba(255, 255, 255, 0.56);
 }
 
 .dimmer.ng-enter,
@@ -112,14 +121,22 @@ dd:after {
 .sidebar {
   position: absolute;
   padding-left: 10px;
+  padding-top: 20%;
   width: 200px;
-  top: 10%;
+  height: 100%;
+  overflow-y: scroll;
+  top: 0;
   z-index: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   letter-spacing: .1em;
   background-color: #ffffff;
+}
+
+.sidebar .tools {
+  position: absolute;
+  bottom: 10px;
 }
 
 .scroller_wrapper {
@@ -159,14 +176,14 @@ dd:after {
   background-color: #f8f9f8;
   width: 100%;
   height: 3em;
-  z-index: 101;
+  z-index: 700;
   top: 0px;
   color: #83949e;
   border-bottom: 1px solid #e2e3e2;
 }
 
 .app_header.no_bottom {
-  border-bottom-color: #ffffff;
+  border-bottom-color: #f8f9f7;
 }
 
 .app_header > * {
@@ -227,12 +244,11 @@ i.sup {
 
 .dropdown {
   overflow: hidden;
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   width: 100%;
   position: absolute;
-  z-index: 1001;
+  z-index: 600;
   top: 3em;
-  border-bottom: 2px solid #54616a;
   text-align: right;
   
   -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
@@ -240,6 +256,7 @@ i.sup {
   -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  border-bottom: 1px solid #e2e3e1;
 }
 
 .dropdown.ng-enter,
@@ -322,7 +339,6 @@ header .btn {
 .btnset.vertical .btn {
   display: block;
   padding: 0;
-  margin: 0;
   border: none;
   text-align: right;
   display: block;
@@ -336,6 +352,7 @@ header .btn {
 .btnset .btn {
   display: table-cell;
   text-align: center;
+  padding: 1em;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -344,10 +361,32 @@ header .btn {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  border-right: none;
+}
+
+.btnset .btn:first-of-type {
+  border-left: none;
 }
 
 .btnset .btn.selected {
-  background-color: #ffffff;
+  background-color: #f07100;
+  position: relative;
+  color: #ffffff;
+}
+
+/*.btnset .btn.selected::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: -19px;
+  border: 10px solid #f07100;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+  border-left-color: transparent;
+}*/
+
+.btnset.three_btns {
+  
 }
 
 .five_btns .btn {
@@ -380,14 +419,21 @@ header .btn {
 
 .sidebar li {
   opacity: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-transition: all 300ms ease-in-out;
   -moz-transition: all 300ms ease-in-out;
   -ms-transition: all 300ms ease-in-out;
   -o-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
   color: #767676;
+  border: 1px solid white;
+}
+
+.sidebar li.selected {
+  border: 1px solid #e5e5e5;
+  border-right: none;
 }
 
 .sidebar li.personal {
@@ -479,8 +525,11 @@ header .btn {
   padding: 0;
 }
 
-nav li {
+nav a {
   padding: .6em 0 .6em .6em;
+}
+
+nav {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
@@ -523,7 +572,7 @@ nav li {
   height: 100%;
   width: 80%;
   right: -90%;
-  border-left: 1px solid rgba(104, 104, 104, 0);
+  border-left: 1px solid rgba(0, 0, 0, 0.16);
   
   
   -webkit-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
@@ -531,10 +580,11 @@ nav li {
   -ms-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   -o-transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
   transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  box-shadow: -10px 0 20px rgba(0, 0, 0, 0.06);
 }
 
 .dimmer.conversations_dimmer {
-  z-index: 500;
+  z-index: 700;
 }
 
 .tools_panel.visible {
@@ -1244,7 +1294,7 @@ fieldset.padded {
   margin: 10px auto 0;
   border-top: 1px solid #cbcdcf;
   text-align: center;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   font-size: 1.4em;
 }
@@ -1405,10 +1455,6 @@ textarea {
 }
 
 /* Routing transistions */
-  
-.page.last {
-  -webkit-transform: translateX(-100%);
-}
 
 .slide_right {
   -webkit-transform: translateX(80%);
@@ -1422,323 +1468,7 @@ textarea {
   transition: all 500ms cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
-@-webkit-keyframes in {
-
-	from {
-		-webkit-transform: translateX(-100%);
-	}
-
-	to {
-		-webkit-transform: translateX(0%);
-	}
-
-}
-@-moz-keyframes in {
-
-	from {
-		-moz-transform: translateX(-100%);
-	}
-
-	to {
-		-moz-transform: translateX(0%);
-	}
-
-}
-@keyframes in {
-
-	from {
-		transform: translateX(-100%);
-	}
-
-	to {
-		transform: translateX(0%);
-	}
-
-}
-
-@-webkit-keyframes out {
-
-	from {
-		-webkit-transform: translateX(0%);
-	}
-
-	to {
-		-webkit-transform: translateX(-100%);
-	}
-
-}
-@-moz-keyframes out {
-
-	from {
-		-moz-transform: translateX(0%);
-	}
-
-	to {
-		-moz-transform: translateX(-100%);
-	}
-
-}
-@keyframes out {
-
-	from {
-		transform: translateX(0%);
-	}
-
-	to {
-		transform: translateX(-100%);
-	}
-
-}
-
-@-webkit-keyframes in_two {
-
-	from {
-		-webkit-transform: translateX(100%);
-	}
-
-	to {
-		-webkit-transform: translateX(0%);
-	}
-
-}
-@-moz-keyframes in_two {
-
-	from {
-		-moz-transform: translateX(100%);
-	}
-
-	to {
-		-moz-transform: translateX(0%);
-	}
-
-}
-@keyframes in_two {
-
-	from {
-		transform: translateX(100%);
-	}
-
-	to {
-		transform: translateX(0%);
-	}
-
-}
-
-@-webkit-keyframes out_two {
-
-	from {
-		-webkit-transform: translateX(0%);
-	}
-
-	to {
-		-webkit-transform: translateX(100%);
-	}
-
-}
-@-moz-keyframes out_two {
-
-	from {
-		-moz-transform: translateX(0%);
-	}
-
-	to {
-		-moz-transform: translateX(100%);
-	}
-
-}
-@keyframes out_two {
-
-	from {
-		transform: translateX(0%);
-	}
-
-	to {
-		transform: translateX(100%);
-	}
-
-}
-    
-.in {
-  -webkit-animation: in 200ms;
-  -moz-animation: in 200ms;
-  animation: in 200ms;
-  position: absolute;
-}     
-.out {
-  -webkit-animation: out 200ms;
-  -moz-animation: out 200ms;
-  animation: out 200ms;
-  position: absolute;
-}
-
-.level_two.in {
-  -webkit-animation: in_two 200ms;
-  -moz-animation: in_two 200ms;
-  animation: in_two 200ms;
-  position: absolute;
-}     
-.level_two.out {
-  -webkit-animation: out_two 200ms;
-  -moz-animation: out_two 200ms;
-  animation: out_two 200ms;
-  position: absolute;
-}
-
-/* @group from animate.css */
-
-.animated{-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-ms-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-duration:.5s;-moz-animation-duration:.5s;-ms-animation-duration:.5s;-o-animation-duration:.5s;animation-duration:.5s;}
-
-@-webkit-keyframes bounceInUp {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateY(2000px);
-	}	60% {
-		opacity: 1;
-		-webkit-transform: translateY(-30px);
-	}
-	
-	80% {
-		-webkit-transform: translateY(10px);
-	}
-	
-	100% {
-		-webkit-transform: translateY(0);
-	}
-}
-@-moz-keyframes bounceInUp {
-	0% {
-		opacity: 0;
-		-moz-transform: translateY(2000px);
-	}
-	
-	60% {
-		opacity: 1;
-		-moz-transform: translateY(-30px);
-	}
-	
-	80% {
-		-moz-transform: translateY(10px);
-	}
-	
-	100% {
-		-moz-transform: translateY(0);
-	}
-}
-
-@keyframes bounceInUp {
-	0% {
-		opacity: 0;
-		transform: translateY(2000px);
-	}
-	
-	60% {
-		opacity: 1;
-		transform: translateY(-30px);
-	}
-	
-	80% {
-		transform: translateY(10px);
-	}
-	
-	100% {
-		transform: translateY(0);
-	}
-}
-
-.bounceInUp {
-	-webkit-animation-name: bounceInUp;
-	-moz-animation-name: bounceInUp;
-	-o-animation-name: bounceInUp;
-	animation-name: bounceInUp;
-}
-
-@-webkit-keyframes bounceInDown {
-	0% {
-		opacity: 0;
-		-webkit-transform: translateY(-40px);
-	}
-	
-	40% {
-		opacity: 1;
-		-webkit-transform: translateY(10px);
-	}
-	
-	80% {
-		-webkit-transform: translateY(-5px);
-	}
-	
-	100% {
-		-webkit-transform: translateY(0);
-	}
-}
-
-@-moz-keyframes bounceInDown {
-	0% {
-		opacity: 0;
-		transform: translateY(-40px);
-	}
-	
-	40% {
-		opacity: 1;
-		transform: translateY(10px);
-	}
-	
-	80% {
-		transform: translateY(-5px);
-	}
-	
-	100% {
-		transform: translateY(0);
-	}
-}
-
-@keyframes bounceInDown {
-	0% {
-		opacity: 0;
-		transform: translateY(-40px);
-	}
-	
-	40% {
-		opacity: 1;
-		transform: translateY(10px);
-	}
-	
-	80% {
-		transform: translateY(-5px);
-	}
-	
-	100% {
-		transform: translateY(0);
-	}
-}
-
-.bounceInDown {
-	-webkit-animation-name: bounceInDown;
-	-moz-animation-name: bounceInDown;
-	-o-animation-name: bounceInDown;
-	animation-name: bounceInDown;
-}
-
 /* @end */
-
-.bounceIn-enter
-{
--webkit-animation-name: bounceInDown;
--moz-animation-name: bounceInDown;
--o-animation-name: bounceInDown;
-animation-name: bounceInDown;
-}
- 
-.bounceIn-leave.bounceIn-leave-active,
-.bounceIn-enter {
-
-
-}
- 
-.bounceIn-enter.bounceIn-enter-active,
-.bounceIn-leave {
-  
-}
 
 .control_panel {
   display: none !important;
@@ -1881,15 +1611,15 @@ time {
 
 .object-list {
   list-style: none;
-  padding: 0;
+  padding: 0 1em;
   margin: 0;
   background-color: #ffffff;
 }
 
 .object-list li {
   display: table;
-  padding: 1em;
-  border-top: 1px solid #cbcdd0;
+  padding: 1em 0;
+  border-top: 1px solid #ecedee;
   width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
