--- a/jade_partials/campaign_rewards.html.jade
+++ b/jade_partials/campaign_rewards.html.jade
@@ -1,20 +1,21 @@
-.scroller
-  .btnset.three_btns
-    button.btn(ng-click='toggleRewardsList(\'open\')', ng-class='{selected: rewardsView == \'open\'}') Open
-    button.btn(ng-click='toggleRewardsList(\'redeemed\')', ng-class='{selected: rewardsView == \'redeemed\'}') Redeemed
-    button.btn(ng-click='toggleRewardsList(\'expired\')', ng-class='{selected: rewardsView == \'expired\'}') Expired
-  input(type='text', ng-model='search_query.$', placeholder='search names or secret codes')
-  ul.object-list
-    li.object-item(ng-repeat='reward in viewCampaign.rewards | filter:search_query')
-      button.push_right.btn(ng-click='claimReward(reward)', ng-class='{claimed: reward.date_claimed != false}') redeem
-      a(href='#/campaign/{{campaignId}}/rewards/{{reward.id}}')
-        h1(ng-bind='reward.title')
-        dl
-          dt Owner:
-          dd(ng-bind='reward.owner')
-          dt(ng-show='rewardsView == \'open\'') Issued:
-          dd(ng-show='rewardsView == \'open\'', ng-bind='reward.date_issued')
-          dt(ng-show='rewardsView == \'open\'') Secret Code:
-          dd(ng-show='rewardsView == \'open\'', ng-bind='reward.passphrase')
-          dt(ng-show='reward.date_claimed != false') Date Redeemed:
-          dd(ng-show='reward.date_claimed != false', ng-bind='reward.date_claimed')
+.scroller_wrapper
+  .scroller
+    .btnset.three_btns
+      a.btn(ng-click='toggleRewardsList(\'open\')', ng-class='{selected: rewardsView == \'open\'}') Open
+      a.btn(ng-click='toggleRewardsList(\'redeemed\')', ng-class='{selected: rewardsView == \'redeemed\'}') Redeemed
+      a.btn(ng-click='toggleRewardsList(\'expired\')', ng-class='{selected: rewardsView == \'expired\'}') Expired
+    input(type='text', ng-model='search_query.$', placeholder='search names or secret codes')
+    ul.object-list
+      li.object-item(ng-repeat='reward in viewCampaign.rewards | filter:search_query')
+        button.push_right.btn(ng-click='claimReward(reward)', ng-class='{claimed: reward.date_claimed != false}') redeem
+        a(href='#/campaign/{{campaignId}}/rewards/{{reward.id}}')
+          h1(ng-bind='reward.title')
+          dl
+            dt Owner:
+            dd(ng-bind='reward.owner')
+            dt(ng-show='rewardsView == \'open\'') Issued:
+            dd(ng-show='rewardsView == \'open\'', ng-bind='reward.date_issued')
+            dt(ng-show='rewardsView == \'open\'') Secret Code:
+            dd(ng-show='rewardsView == \'open\'', ng-bind='reward.passphrase')
+            dt(ng-show='reward.date_claimed != false') Date Redeemed:
+            dd(ng-show='reward.date_claimed != false', ng-bind='reward.date_claimed')
