--- a/partials/campaign_rewards.html
+++ b/partials/campaign_rewards.html
@@ -1,25 +1,23 @@
 
-<div class="scroller">
-  <div class="btnset three_btns">
-    <button ng-click="toggleRewardsList('open')" ng-class="{selected: rewardsView == 'open'}" class="btn">Open</button>
-    <button ng-click="toggleRewardsList('redeemed')" ng-class="{selected: rewardsView == 'redeemed'}" class="btn">Redeemed</button>
-    <button ng-click="toggleRewardsList('expired')" ng-class="{selected: rewardsView == 'expired'}" class="btn">Expired</button>
+<div class="scroller_wrapper">
+  <div class="scroller">
+    <div class="btnset three_btns"><a ng-click="toggleRewardsList('open')" ng-class="{selected: rewardsView == 'open'}" class="btn">Open</a><a ng-click="toggleRewardsList('redeemed')" ng-class="{selected: rewardsView == 'redeemed'}" class="btn">Redeemed</a><a ng-click="toggleRewardsList('expired')" ng-class="{selected: rewardsView == 'expired'}" class="btn">Expired</a></div>
+    <input type="text" ng-model="search_query.$" placeholder="search names or secret codes"/>
+    <ul class="object-list">
+      <li ng-repeat="reward in viewCampaign.rewards | filter:search_query" class="object-item">
+        <button ng-click="claimReward(reward)" ng-class="{claimed: reward.date_claimed != false}" class="push_right btn">redeem</button><a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
+          <h1 ng-bind="reward.title"></h1>
+          <dl>
+            <dt>Owner:</dt>
+            <dd ng-bind="reward.owner"></dd>
+            <dt ng-show="rewardsView == 'open'">Issued:</dt>
+            <dd ng-show="rewardsView == 'open'" ng-bind="reward.date_issued"></dd>
+            <dt ng-show="rewardsView == 'open'">Secret Code:</dt>
+            <dd ng-show="rewardsView == 'open'" ng-bind="reward.passphrase"></dd>
+            <dt ng-show="reward.date_claimed != false">Date Redeemed:</dt>
+            <dd ng-show="reward.date_claimed != false" ng-bind="reward.date_claimed"></dd>
+          </dl></a>
+      </li>
+    </ul>
   </div>
-  <input type="text" ng-model="search_query.$" placeholder="search names or secret codes"/>
-  <ul class="object-list">
-    <li ng-repeat="reward in viewCampaign.rewards | filter:search_query" class="object-item">
-      <button ng-click="claimReward(reward)" ng-class="{claimed: reward.date_claimed != false}" class="push_right btn">redeem</button><a href="#/campaign/{{campaignId}}/rewards/{{reward.id}}">
-        <h1 ng-bind="reward.title"></h1>
-        <dl>
-          <dt>Owner:</dt>
-          <dd ng-bind="reward.owner"></dd>
-          <dt ng-show="rewardsView == 'open'">Issued:</dt>
-          <dd ng-show="rewardsView == 'open'" ng-bind="reward.date_issued"></dd>
-          <dt ng-show="rewardsView == 'open'">Secret Code:</dt>
-          <dd ng-show="rewardsView == 'open'" ng-bind="reward.passphrase"></dd>
-          <dt ng-show="reward.date_claimed != false">Date Redeemed:</dt>
-          <dd ng-show="reward.date_claimed != false" ng-bind="reward.date_claimed"></dd>
-        </dl></a>
-    </li>
-  </ul>
 </div>
