--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -2,22 +2,25 @@
 <div class="animation_wrapper layer0">
   <div ng-if="new_mode" class="module_wrapper">
     <div ng-click="toggleNewMode()" class="module_fader"></div>
-    <form ng-if="new_mode" ng-submit="createCampaign(new_campaign_title, handle_to_submit, is_local, new_campaign_locale, discoverable)" class="module">
+    <form ng-if="new_mode" ng-submit="createCampaign(new_campaign_title, handle_to_use, is_local, new_campaign_locale, discoverable)" class="module">
+      <div class="btnset two_btns"><a type="button" ng-click="duplicate_mode = true" ng-class="{selected: duplicate_mode}" class="btn">duplicate</a><a type="button" ng-click="duplicate_mode = false" ng-class="{selected: !duplicate_mode}" class="btn">scratch</a></div>
       <div class="content_wrapper">
-        <button type="button" ng-click="duplicate_mode = true">duplicate</button>
-        <button type="button" ng-click="duplicate_mode = false">scratch</button>
         <div ng-show="!duplicate_mode" class="scratch"></div>
         <div ng-show="duplicate_mode" class="duplicate">
           <label>or duplicate an existing campaign:</label>
           <select ng-model="campaign_to_duplicate" ng-options="campaign.id as campaign.title for campaign in campaignTitleList"></select>
         </div>
+        <select ng-model="handle_to_use" ng-options="handle.id as handle.text for handle in handleList"></select>
         <label for="campaign_text">Name this campaign:<br/><small>(this is the public title for your feedback.)</small></label>
         <input id="campaign_text" type="text" name="new_campaign_title" placeholder="eg. 'Crepes &amp; Things Feedback'" ng-model="new_campaign_title"/>
       </div>
-      <div class="btnset two_btns">
+      <div ng-if="!duplicate_mode" class="btnset two_btns">
         <button ng-click="toggleNewMode()" type="button" class="btn">cancel</button>
         <button ng-if="!duplicate_mode" type="submit" ng-click="resetStep()" class="btn positive">Continue</button>
-        <button ng-if="duplicate_mode" type="button" ng-click="duplicateCampaign(new_campaign_title, campaign_to_duplicate)" class="btn positive">Duplicate </button>
+      </div>
+      <div ng-if="duplicate_mode" class="btnset two_btns">
+        <button ng-click="toggleNewMode()" type="button" class="btn">cancel</button>
+        <button ng-if="duplicate_mode" type="button" ng-click="duplicateCampaign(new_campaign_title, campaign_to_duplicate, handle_to_use)" class="btn positive">Duplicate </button>
       </div>
     </form>
   </div>
